# avapi

./: .gitignore  Cargo.toml  README.md
src/: client.rs  lib.rs  main.rs  models.rs
src/endpoints/: global_quote.rs  mod.rs
