[package]
name = "avapi"
version = "0.1.0"
authors = ["Natalie Pendragon <natpen@natpen.net>"]
keywords = ["api", "stocks", "financial", "alpha-vantage"]
license = "MIT"
readme = "README.md"
description = "Crate for consuming the Alpha Vantage financial data API as a client"
repository = "https://github.com/natpen/avapi"

[dependencies]
config = "0.9"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
